# cesp_ia_y_bigdata

programacion-ia_evaluables/U4/: relfexion.md
programacion-ia_evaluables/U4/caso_2-email/: U4S2-CASO_2.json  pruebas.md  system_prompt.md
programacion-ia_evaluables/U4/caso_3-asistente/: U4S2-CASO_3.json  pruebas.md  system_prompt.md
programacion-ia_evaluables/U6/gmail-mcp-server/: documento_explicativo.md  gmail_mcp_server.py  pyproject.toml  requirements.txt
programacion-ia_evaluables/U6/gmail-mcp-server/documentacion/: pruebas.md
programacion-ia_evaluables/fernandez_de_cordoba-yago-ml2-u5-rag/: README.md
programacion-ia_evaluables/fernandez_de_cordoba-yago-ml2-u5-rag/documentos/: politicas_rrhh.txt  procedimiento_soporte.txt
programacion-ia_evaluables/fernandez_de_cordoba-yago-ml2-u5-rag/pruebas/prueba1/: chunks-prueba1.md  evaluacion-prueba1.md
programacion-ia_evaluables/fernandez_de_cordoba-yago-ml2-u5-rag/pruebas/prueba2/: chunks-prueba2.md  evaluacion-prueba2.md
programacion-ia_evaluables/fernandez_de_cordoba-yago-ml2-u5-rag/pruebas/prueba3/: chunks-prueba3.md  evaluacion-prueba3.md
programacion-ia_evaluables/fernandez_de_cordoba-yago-ml2-u5-rag/pruebas/prueba4/: chunks-prueba4.md  evaluacion-prueba4.md
programacion-ia_evaluables/fernandez_de_cordoba-yago-ml2-u5-rag/pruebas/prueba5/: chunks-prueba5.md  evaluacion-prueba5.md
programacion-ia_evaluables/fernandez_de_cordoba-yago-ml2-u5-rag/workflow/: U5_YFT.json
programacion-ia_evaluables/unidad_3/sesion_2/langgraph/: README.md  ejerciciosU3S2b_YagoFT.ipynb
