[project]
name = "gmail-mcp-server"
version = "0.1.0"
description = "Servidor MCP para gestionar Gmail mediante OAuth y Claude Desktop."
readme = "documento_explicativo.md"
requires-python = ">=3.10"
dependencies = [
    "google-auth",
    "google-auth-oauthlib",
    "google-api-python-client",
    "mcp",
]

[project.scripts]
gmail-mcp-server = "gmail_mcp_server:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["gmail_mcp_server"]